fix: 修复违规未统计违规数
