# docs/swagger.json
@@ -602,6 +602,9 @@
                 "nickname": {
                     "type": "string"
                 },
+                "status": {
+                    "$ref": "#/definitions/project.ProjectStatus"
+                },
                 "tags": {
                     "type": "array",
                     "items": {
@@ -619,6 +622,7 @@
                 "status": {
                     "enum": [
                         0,
+                        1,
                         2
                     ],
                     "allOf": [
